# nhl-scraper

./: .gitignore  LICENSE  article.py  bs.csv  bs.py  comp.html  comp.py  decomp_rapm.csv  game.py  gamecard.py  heightmap.py  puck_possession.csv  pyproject.toml  rapm.ipynb  rapm.py  rapm_2023.csv  rapm_2024.csv  rapm_2025.csv  rapm_model.py  rapm_model_nb.py  rapm_nb.py  requirements.txt  stints.csv  team_shotmap.py  test.csv  test.py  xg.py
nhl-scraper/: Games.py
nhl_scraper/: games.py  graphs.py  model.py  player.py  setup.py  xg_model.joblib
