[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nhl-scraper"
version = "0.0.1"
authors = [
  { name="Kiran Roye", email="royekiran@gmail.com" },
]
description = "A library containing various utilities for collecting information from the NHL's API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/KingKobra7899/nhl-scraper"
Issues = "https://github.com/KingKobra7899/nhl-scraper/issues"
